Stopped content touching edge of screen on tablet-sized devices.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -110,3 +110,14 @@ body {
         margin-right: 100px !important;
     }
 }
+
+@media only screen and (max-width: 1000px) {
+    .container {
+        padding: 25px;
+    }
+
+    .uk-margin-xlarge-right {
+        /* Have to apply !important to overwrite UIkit */
+        margin-right: 125px !important;
+    }
+}
